--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
- #ruby File.read('.ruby-version').strip
+ ruby File.read('.ruby-version').strip
 
 ruby "3.1.4"
 
