--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,21 @@
 databases:
   - name: my_db
-    databaseName: my_postgresql
+    databaseName: my_postgreql
     user: my_service
     region: singapore
-    plan: free
+
 services:
   - type: web
     name: my_service
-    env: docker
+    env: ruby
     region: singapore
-    branch: develop
     plan: free
-    dockerfilePath: ./docker/deploy/staging/Dockerfile
-    domains: # 独自ドメインを使う場合は設定する
-      - xxxx.com 
+    buildCommand: "./bin/render-build.sh"
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: my_db
           property: connectionString
-      - key: CORS_ORIGINS # フロントエンドバックエンドでオリジンが異なる場合は設定する
+      - key: RAILS_MASTER_KEY
+        sync: false
