--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,3 @@
-databases:
-  - name: my_db
-    databaseName: my_postgreql
-    user: my_service
-    region: singapore
-
 services:
   - type: web
     name: my_service
@@ -19,3 +13,19 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: HOSTNAME
+        value: dpg-ci9e28d9aq02ihs9glng-a
+      - key: PORT
+        value: 5432
+      - key: DATABASE
+        value: rails_err
+      - key: USERNAME
+        value: rails_err_user
+      - key: PASSWORD
+        value: 58GD25GSsIFCsX2DRQV5i5BEy26I83VK
+      - key: INTERNAL_DATABASE_URL
+        value: postgres://rails_err_user:58GD25GSsIFCsX2DRQV5i5BEy26I83VK@dpg-ci9e28d9aq02ihs9glng-a/rails_err
+      - key: EXTERNAL_DATABASE_URL
+        value: postgres://rails_err_user:58GD25GSsIFCsX2DRQV5i5BEy26I83VK@dpg-ci9e28d9aq02ihs9glng-a.singapore-postgres.render.com/rails_err
+      - key: PSQL_COMMAND
+        value: PGPASSWORD=58GD25GSsIFCsX2DRQV5i5BEy26I83VK psql -h dpg-ci9e28d9aq02ihs9glng-a.singapore-postgres.render.com -U rails_err_user rails_err
