--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 # プロキシ先の指定
-# Nginxが受け取ったリクエストをバックエンドのpumaに送信
+# Nginxが受け取ったリクエストをバックエンドのPumaに送信
 upstream dnprp-app {
   # ソケット通信したいのでpuma.sockを指定
   server unix:///dnprp-app/tmp/sockets/puma.sock;
@@ -8,8 +8,8 @@ upstream dnprp-app {
 server {
   listen 80;
   # ドメインもしくはIPを指定
-  #server_name example.com [or 192.168.xx.xx [or localhost]];
-  server_name localhost
+  # server_name example.com [or 192.168.xx.xx [or localhost]];
+  server_name yourdomain.com;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
