--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
     name: my_service
-    env: ruby
+    env: ruby-3.1.4
     region: singapore
     plan: free
-    buildCommand: "./bin/render-build.sh"
+    buildCommand: "sh ./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
@@ -12,20 +12,19 @@ services:
           name: my_db
           property: connectionString
       - key: RAILS_MASTER_KEY
-        sync: false
       - key: HOSTNAME
         value: dpg-ci9e28d9aq02ihs9glng-a
       - key: PORT
-        value: 5432
+        value: '5432'
       - key: DATABASE
         value: rails_err
       - key: USERNAME
         value: rails_err_user
       - key: PASSWORD
-        value: 58GD25GSsIFCsX2DRQV5i5BEy26I83VK
+        value: '58GD25GSsIFCsX2DRQV5i5BEy26I83VK'
       - key: INTERNAL_DATABASE_URL
         value: postgres://rails_err_user:58GD25GSsIFCsX2DRQV5i5BEy26I83VK@dpg-ci9e28d9aq02ihs9glng-a/rails_err
       - key: EXTERNAL_DATABASE_URL
         value: postgres://rails_err_user:58GD25GSsIFCsX2DRQV5i5BEy26I83VK@dpg-ci9e28d9aq02ihs9glng-a.singapore-postgres.render.com/rails_err
       - key: PSQL_COMMAND
-        value: PGPASSWORD=58GD25GSsIFCsX2DRQV5i5BEy26I83VK psql -h dpg-ci9e28d9aq02ihs9glng-a.singapore-postgres.render.com -U rails_err_user rails_err
+        value: "PGPASSWORD=58GD25GSsIFCsX2DRQV5i5BEy26I83VK psql -h dpg-ci9e28d9aq02ihs9glng-a.singapore-postgres.render.com -U rails_err_user rails_err"
