--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: Renderで作成したDBアプリ名
+          name: rails_err
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
