--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -86,6 +86,6 @@ test:
 #
 production:
   <<: *default
-  database: dnprp_app_production
-  username: dnprp_app
-  password: <%= ENV["DNPRP_APP_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
