--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
   listen 80;
   # ドメインもしくはIPを指定
   # server_name example.com [or 192.168.xx.xx [or localhost]];
-  server_name yourdomain.com;
+  server_name _;
 
   access_log /var/log/nginx/access.log;
   error_log  /var/log/nginx/error.log;
