--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: rails-err
-    databaseName: rails_err
-    user: rails_err
+  - name: rails_err_db
+    databaseName: rails_err_postgreql
+    user: rails_err_service
     region: singapore
 
 services:
   - type: web
-    name: rails_err
+    name: rails_err_service
     env: ruby
     region: singapore
     plan: free
@@ -15,8 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: rails_err
+          name: rails_err_db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
-
