--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,13 @@
 databases:
-  - name: rails_err_db
-    databaseName: rails_err_postgreql
-    user: rails_err_service
+  - name: rails_err
+    databaseName: rails_err
+    user: lunch_bot
     region: singapore
+    plan: free
 
 services:
   - type: web
-    name: rails_err_service
+    name: rails_err
     env: ruby
     region: singapore
     plan: free
@@ -15,7 +16,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: rails_err_db
+          name: rails_err
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
