--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     env: ruby
     region: singapore
     plan: free
-    buildCommand: "./bin/render-build.sh"
+buildCommand: "./src/bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
